--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rollup-plugin-typescript",
-  "version": "0.8.1",
+  "name": "rollup-plugin-new-ts",
+  "version": "0.0.1",
   "description": "Seamless integration between Rollup and TypeScript.",
   "main": "dist/rollup-plugin-typescript.cjs.js",
   "module": "dist/rollup-plugin-typescript.es.js",
